deploy: cfb5cd6e4d64117f931ad05852d0ad44b048aae4

--- a/genindex.html
+++ b/genindex.html
@@ -252,6 +252,10 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="geosciences/Milankovitch_cycles.html#index-1">Eccentricity</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-0">Exponential function</a>
 </li>
   </ul></td>
@@ -362,6 +366,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-0">Matrix-vector multiplication</a>
 </li>
+      <li><a href="geosciences/Milankovitch_cycles.html#index-0">Milankovitch cycles</a>
+</li>
       <li><a href="mathematics/complex analysis/Introduction.html#index-1">Modulus</a>
 </li>
   </ul></td>
@@ -369,6 +375,10 @@
 
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="geosciences/Milankovitch_cycles.html#index-2">Obliquity</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-4">Outer product</a>
 </li>
@@ -398,10 +408,10 @@
 </li>
       <li><a href="coding/Pandas/Pandas_2filter_select_assign.html#index-1">Pandas: selecting</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-3">Pandas: sorting</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Pandas/Pandas_4summary_statistics.html#index-0">Pandas: summary stats</a>
 </li>
       <li><a href="coding/Intro to Python/Flow_control_statements.html#index-1">Pass statement</a>
@@ -419,6 +429,8 @@
       <li><a href="coding/Intro to Python/Matplotlib.html#index-2">Plots: scatter</a>
 </li>
       <li><a href="mathematics/complex analysis/complex_plane.html#index-1">Polar form of complex numbers</a>
+</li>
+      <li><a href="geosciences/Milankovitch_cycles.html#index-3">Precession</a>
 </li>
       <li><a href="coding/Intro to Python/Printing_and_formatting_statements.html#index-0">Python basics</a>
 </li>
