--- a/geosciences/Dynamic_Earth.html
+++ b/geosciences/Dynamic_Earth.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Waves" href="Wave_dispersion.html" />
+    <link rel="next" title="Milankovitch cycles" href="Milankovitch_cycles.html" />
     <link rel="prev" title="Image Filtering" href="Image_Filtering.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -81,6 +81,9 @@
     </li>
     <li class="active">
       <a href="">Dynamic Earth and Planets</a>
+    </li>
+    <li class="">
+      <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
     </li>
     <li class="">
       <a href="Wave_dispersion.html">Waves</a>
@@ -865,7 +868,7 @@ Number of points within 2*RMS = 97.10 %.
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Image_Filtering.html" title="previous page">Image Filtering</a>
-    <a class='right-next' id="next-link" href="Wave_dispersion.html" title="next page">Waves</a>
+    <a class='right-next' id="next-link" href="Milankovitch_cycles.html" title="next page">Milankovitch cycles</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
