--- a/geosciences/Wave_dispersion.html
+++ b/geosciences/Wave_dispersion.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
-    <link rel="prev" title="Dynamic Earth and Planets" href="Dynamic_Earth.html" />
+    <link rel="prev" title="Milankovitch cycles" href="Milankovitch_cycles.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -81,6 +81,9 @@
     </li>
     <li class="">
       <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
+    </li>
+    <li class="">
+      <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
     </li>
     <li class="active">
       <a href="">Waves</a>
@@ -7690,7 +7693,7 @@ b28AAAAdZGF0YQAAAAEAAAAATGF2ZjU4LjI5LjEwMA==
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Dynamic_Earth.html" title="previous page">Dynamic Earth and Planets</a>
+    <a class='left-prev' id="prev-link" href="Milankovitch_cycles.html" title="previous page">Milankovitch cycles</a>
     <a class='right-next' id="next-link" href="Cartography_Cartopy.html" title="next page">Creating maps in Cartopy</a>
 
     </div>
