deploy: 1494ff68b04c740e30188bec7657fee9fcbb8908

--- a/mathematics/Fractals.html
+++ b/mathematics/Fractals.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Taylor series" href="Taylor_series.html" />
+    <link rel="next" title="Lecture 1 (Vectors)" href="Vectors.html" />
     <link rel="prev" title="Linear Regression" href="Linear_Regression.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -81,6 +81,9 @@
     </li>
     <li class="active">
       <a href="">Fractals</a>
+    </li>
+    <li class="">
+      <a href="Vectors.html">Lecture 1 (Vectors)</a>
     </li>
     <li class="">
       <a href="Taylor_series.html">Taylor series</a>
@@ -712,7 +715,7 @@ y \in \langle 0.1, 0.3\rangle\end{split}\]</div>
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Linear_Regression.html" title="previous page">Linear Regression</a>
-    <a class='right-next' id="next-link" href="Taylor_series.html" title="next page">Taylor series</a>
+    <a class='right-next' id="next-link" href="Vectors.html" title="next page">Lecture 1 (Vectors)</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
