--- a/mathematics/Taylor_series.html
+++ b/mathematics/Taylor_series.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Introduction to statistics for Geoscientists" href="Statistics_for_Geoscientists.html" />
-    <link rel="prev" title="Fractals" href="Fractals.html" />
+    <link rel="prev" title="Lecture 1 (Vectors)" href="Vectors.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -81,6 +81,9 @@
     </li>
     <li class="">
       <a href="Fractals.html">Fractals</a>
+    </li>
+    <li class="">
+      <a href="Vectors.html">Lecture 1 (Vectors)</a>
     </li>
     <li class="active">
       <a href="">Taylor series</a>
@@ -452,7 +455,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Fractals.html" title="previous page">Fractals</a>
+    <a class='left-prev' id="prev-link" href="Vectors.html" title="previous page">Lecture 1 (Vectors)</a>
     <a class='right-next' id="next-link" href="Statistics_for_Geoscientists.html" title="next page">Introduction to statistics for Geoscientists</a>
 
     </div>
