--- a/mathematics/complex analysis/complex_functions.html
+++ b/mathematics/complex analysis/complex_functions.html
@@ -83,6 +83,9 @@
       <a href="../Fractals.html">Fractals</a>
     </li>
     <li class="">
+      <a href="../Vectors.html">Lecture 1 (Vectors)</a>
+    </li>
+    <li class="">
       <a href="../Taylor_series.html">Taylor series</a>
     </li>
     <li class="">
