--- a/geosciences/Seismology.html
+++ b/geosciences/Seismology.html
@@ -101,7 +101,7 @@
       <a href="Tides.html">Tides</a>
     </li>
     <li class="">
-      <a href="Climate_Model.html">Pure Planck response</a>
+      <a href="Climate_Model.html">Constructing an energy balance model</a>
     </li>
     <li class="active">
       <a href="">Downloading earthquake data</a>
