--- a/geosciences/Tides.html
+++ b/geosciences/Tides.html
@@ -101,7 +101,7 @@
       <a href="">Tides</a>
     </li>
     <li class="">
-      <a href="Climate_Model.html">Pure Planck response</a>
+      <a href="Climate_Model.html">Constructing an energy balance model</a>
     </li>
     <li class="">
       <a href="Seismology.html">Downloading earthquake data</a>
