deploy: 404d7e33bb937bddd2694c3fb2916c01d4983005

--- a/mathematics/Linear_Regression.html
+++ b/mathematics/Linear_Regression.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Fractals" href="Fractals.html" />
+    <link rel="next" title="Vector calculus" href="Vector_calculus.html" />
     <link rel="prev" title="Lecture 1 (Coordinate Systems)" href="Coordinate_Systems.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -78,6 +78,9 @@
     </li>
     <li class="active">
       <a href="">Linear Regression</a>
+    </li>
+    <li class="">
+      <a href="Vector_calculus.html">Vector calculus</a>
     </li>
     <li class="">
       <a href="Fractals.html">Fractals</a>
@@ -547,7 +550,7 @@ square of the difference between the data and the polynomial of degree 5 = 7.232
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Coordinate_Systems.html" title="previous page">Lecture 1 (Coordinate Systems)</a>
-    <a class='right-next' id="next-link" href="Fractals.html" title="next page">Fractals</a>
+    <a class='right-next' id="next-link" href="Vector_calculus.html" title="next page">Vector calculus</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
