--- a/mathematics/Vectors.html
+++ b/mathematics/Vectors.html
@@ -80,6 +80,9 @@
       <a href="Linear_Regression.html">Linear Regression</a>
     </li>
     <li class="">
+      <a href="Vector_calculus.html">Vector calculus</a>
+    </li>
+    <li class="">
       <a href="Fractals.html">Fractals</a>
     </li>
     <li class="active">
