--- a/genindex.html
+++ b/genindex.html
@@ -176,6 +176,7 @@
  | <a href="#M"><strong>M</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
+ | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -218,10 +219,10 @@
 </li>
       <li><a href="mathematics/sets and functions/functions.html#index-1">Codomain</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/sets and functions/sets.html#index-2">Commutative (Abelian) group</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/complex analysis/intro.html#index-0">Complex Analysis</a>
 </li>
       <li><a href="mathematics/complex analysis/Introduction.html#index-0">Complex conjugate</a>
@@ -232,6 +233,8 @@
 </li>
       <li><a href="coding/Intro to Python/Functions.html#index-0">Creating functions</a>
 </li>
+      <li><a href="mathematics/Vector_calculus.html#index-10">Curl of a vector field</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -240,9 +243,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/complex analysis/complex_plane.html#index-2">De Moivre&#39;s formula</a>
 </li>
+      <li><a href="coding/Intro to Python/Dictionaries.html#index-0">Dictionaries</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/Dictionaries.html#index-0">Dictionaries</a>
+      <li><a href="mathematics/Vector_calculus.html#index-8">Divergence of a vector field</a>
 </li>
       <li><a href="mathematics/sets and functions/functions.html#index-0">Domain</a>
 </li>
@@ -281,6 +286,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-1">Geometric multiplicity</a>
+</li>
+      <li><a href="mathematics/Vector_calculus.html#index-6">Gradient of a scalar field</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -334,16 +341,18 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/Vector_calculus.html#index-12">Laplacian for scalar/vector fields</a>
+</li>
       <li><a href="mathematics/linear_algebra/Theory.html#index-1">Linear combination</a>
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
 </li>
       <li><a href="coding/Intro to Python/Lists.html#index-0">Lists</a>
 </li>
-      <li><a href="coding/Intro to Python/List_comprehensions.html#index-0">Lists: list comprehensions</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/List_comprehensions.html#index-0">Lists: list comprehensions</a>
+</li>
       <li><a href="coding/Intro to Python/Nested_lists.html#index-0">Lists: nested lists</a>
 </li>
       <li><a href="mathematics/sets and functions/logic.html#index-0">Logic symbols</a>
@@ -437,6 +446,14 @@
   </ul></td>
 </tr></table>
 
+<h2 id="Q">Q</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/Vector_calculus.html#index-4">Quiver plot</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -448,19 +465,31 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/Vector_calculus.html#index-3">Scalar and vector fields</a>
+</li>
       <li><a href="coding/Intro to Python/Sets.html#index-0">Sets</a>
 
       <ul>
         <li><a href="mathematics/sets and functions/sets.html#index-0">(mathematics)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Theory.html#index-2">Spanning set</a>
 </li>
       <li><a href="mathematics/Statistics_for_Geoscientists.html#index-0">Statistics: basics</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/Vector_calculus.html#index-5">Streamline plot</a>
+</li>
       <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-1">Surjection</a>
+</li>
+      <li><a href="mathematics/Vector_calculus.html#index-11">SymPy: curl</a>
+</li>
+      <li><a href="mathematics/Vector_calculus.html#index-2">SymPy: differentiation</a>
+</li>
+      <li><a href="mathematics/Vector_calculus.html#index-9">SymPy: divergence</a>
+</li>
+      <li><a href="mathematics/Vector_calculus.html#index-7">SymPy: gradient</a>
 </li>
   </ul></td>
 </tr></table>
@@ -488,8 +517,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Intro to Python/Variables.html#index-0">Variables</a>
 </li>
+      <li><a href="mathematics/Vector_calculus.html#index-0">Vector calculus</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/Vector_calculus.html#index-1">Vector differentiation</a>
+</li>
       <li><a href="mathematics/linear_algebra/Theory.html#index-0">Vector space</a>
 </li>
   </ul></td>
