--- a/mathematics/Fractals.html
+++ b/mathematics/Fractals.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Lecture 1 (Vectors)" href="Vectors.html" />
-    <link rel="prev" title="Linear Regression" href="Linear_Regression.html" />
+    <link rel="prev" title="Vector calculus" href="Vector_calculus.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -78,6 +78,9 @@
     </li>
     <li class="">
       <a href="Linear_Regression.html">Linear Regression</a>
+    </li>
+    <li class="">
+      <a href="Vector_calculus.html">Vector calculus</a>
     </li>
     <li class="active">
       <a href="">Fractals</a>
@@ -714,7 +717,7 @@ y \in \langle 0.1, 0.3\rangle\end{split}\]</div>
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Linear_Regression.html" title="previous page">Linear Regression</a>
+    <a class='left-prev' id="prev-link" href="Vector_calculus.html" title="previous page">Vector calculus</a>
     <a class='right-next' id="next-link" href="Vectors.html" title="next page">Lecture 1 (Vectors)</a>
 
     </div>
