deploy: f342bf06cb35cb73b30d155f9d3cf048dffab503

--- a/mathematics/complex analysis/Introduction.html
+++ b/mathematics/complex analysis/Introduction.html
@@ -370,7 +370,7 @@ z^{-1} &amp; = \frac{1}{z} = \frac{1}{x + iy} \cdot \frac{x - iy}{x -iy} = \frac
 <div class="math notranslate nohighlight">
 \[\begin{split} z = r( cos \varphi + i \sin \varphi) \\
 z^n = r^n ( cos n \varphi + i \sin n \varphi) \end{split}\]</div>
-<p>Let $ w = z^{1/n} $, then</p>
+<p>Let \(w = z^{1/n} \), then</p>
 <div class="math notranslate nohighlight">
 \[ w = r^{1/n} \left ( \cos \left ( \frac{ \varphi}{n} + \frac{2k \pi}{n} \right ) + i \sin \left ( \frac{ \varphi}{n} + \frac{2k \pi}{n} \right ) \right ), \]</div>
 <p>where <span class="math notranslate nohighlight">\(k \in \mathbb{Z}\)</span>.</p>
