--- a/mathematics/linear_algebra/Linear_Systems.html
+++ b/mathematics/linear_algebra/Linear_Systems.html
@@ -479,7 +479,7 @@ x + 2y - z = 1 \end{split}\]</div>
 0 &amp; 0 &amp; 2 \end{pmatrix} 
 \begin{pmatrix} x \\ y \\ z \end{pmatrix} = 
 \begin{pmatrix} -1 \\ 3 \\ 2 \end{pmatrix} \end{split}\]</div>
-<p>Solving an <span class="math notranslate nohighlight">\(n \times n\)</span> triangular system comes down to solving, in <span class="math notranslate nohighlight">\(n\)</span> steps, one equation with one unknown. So we should be able to solve the above system in just 3 steps. We begin solving an upper-triangular system by solving the last equation, which in our case is the following equation with one unknown: $ 2z = 2 $. Clearly, <span class="math notranslate nohighlight">\(z=1\)</span> and <span class="math notranslate nohighlight">\(z\)</span> is no longer an unknown variable. Now we work our way up and solve the 2nd equation, plugging in our unique solution of <span class="math notranslate nohighlight">\(z\)</span>: <span class="math notranslate nohighlight">\(2y -z = 2y - 1 = 3\)</span> which is again an equation with one unknown. We find that <span class="math notranslate nohighlight">\(y = 2\)</span> which we then plug in the first equation: $ x - y + 2z = x - 2 + 2 = x = -1 $. We have successfully solved the system and we found that it has a unique solution <span class="math notranslate nohighlight">\(\mathbf{x} = (-1, 2, 1)\)</span>.</p>
+<p>Solving an <span class="math notranslate nohighlight">\(n \times n\)</span> triangular system comes down to solving, in <span class="math notranslate nohighlight">\(n\)</span> steps, one equation with one unknown. So we should be able to solve the above system in just 3 steps. We begin solving an upper-triangular system by solving the last equation, which in our case is the following equation with one unknown: \( 2z = 2 \). Clearly, <span class="math notranslate nohighlight">\(z=1\)</span> and <span class="math notranslate nohighlight">\(z\)</span> is no longer an unknown variable. Now we work our way up and solve the 2nd equation, plugging in our unique solution of <span class="math notranslate nohighlight">\(z\)</span>: <span class="math notranslate nohighlight">\(2y -z = 2y - 1 = 3\)</span> which is again an equation with one unknown. We find that <span class="math notranslate nohighlight">\(y = 2\)</span> which we then plug in the first equation: \( x - y + 2z = x - 2 + 2 = x = -1 \). We have successfully solved the system and we found that it has a unique solution <span class="math notranslate nohighlight">\(\mathbf{x} = (-1, 2, 1)\)</span>.</p>
 <p>If the system is lower-triangular, we  start solving it from the 1st equation and work our way down to the last one.</p>
 </div>
 <div class="section" id="trapezoidal-matrix">
@@ -495,7 +495,7 @@ x + 2y - z = 1 \end{split}\]</div>
 <div class="math notranslate nohighlight">
 \[\begin{split} x - y + 2z = -1 \\
 2y - z = 3 \end{split}\]</div>
-<p>We begin from the 2nd equation since it involves less unknowns than the 1st equation: $ 2y - z = 3$. Here we have a choice of which variable to solve for, but we shall solve it for <span class="math notranslate nohighlight">\(y\)</span> since it is the <em>leading variable</em> (first non-zero in the row). We find <span class="math notranslate nohighlight">\(y = (z + 3)/2\)</span>. <span class="math notranslate nohighlight">\(z\)</span> is a <em>free variable</em>, which we introduce formally bellow, but it essentially means that <span class="math notranslate nohighlight">\(z\)</span> can be any number <span class="math notranslate nohighlight">\(z \in \mathbb{C}\)</span>, say <span class="math notranslate nohighlight">\(z = t\)</span>. Substituting <span class="math notranslate nohighlight">\(y = (t + 3)/2\)</span> into the 1st equation:</p>
+<p>We begin from the 2nd equation since it involves less unknowns than the 1st equation: \( 2y - z = 3\). Here we have a choice of which variable to solve for, but we shall solve it for <span class="math notranslate nohighlight">\(y\)</span> since it is the <em>leading variable</em> (first non-zero in the row). We find <span class="math notranslate nohighlight">\(y = (z + 3)/2\)</span>. <span class="math notranslate nohighlight">\(z\)</span> is a <em>free variable</em>, which we introduce formally bellow, but it essentially means that <span class="math notranslate nohighlight">\(z\)</span> can be any number <span class="math notranslate nohighlight">\(z \in \mathbb{C}\)</span>, say <span class="math notranslate nohighlight">\(z = t\)</span>. Substituting <span class="math notranslate nohighlight">\(y = (t + 3)/2\)</span> into the 1st equation:</p>
 <div class="math notranslate nohighlight">
 \[ x = y - 2z - 1 = (t + 3)/2 - 2t - 1 = -\frac{3t}{2} + \frac{1}{2} \]</div>
 <p>Therefore our solution set in terms of <span class="math notranslate nohighlight">\(z\)</span> is <span class="math notranslate nohighlight">\(\{(-\frac{3t}{2} + \frac{1}{2}, \frac{t + 3}{2}, t), t \in \mathbb{c}\}\)</span>.</p>
@@ -538,7 +538,7 @@ x + 2y - z = 1 \end{split}\]</div>
 <img alt="../../_images/Linear_Systems_2_0.png" src="../../_images/Linear_Systems_2_0.png" />
 </div>
 </div>
-<p>The two lines cross at only one point, at point $ (37/11, 1/11)$. This point is the <em>unique solution</em> of the system, <span class="math notranslate nohighlight">\(\mathbf{x} = (37/11, 1/11)\)</span>.</p>
+<p>The two lines cross at only one point, at point \( (37/11, 1/11)\). This point is the <em>unique solution</em> of the system, <span class="math notranslate nohighlight">\(\mathbf{x} = (37/11, 1/11)\)</span>.</p>
 <p>Let’s now consider two systems of two equations whose graphs are parallel lines:</p>
 <div class="math notranslate nohighlight">
 \[\begin{split} 2x + 3y = 7  \qquad 2x + 3y = 7 \\ 2x + 3y = 5 \qquad 4x + 6y = 14\end{split}\]</div>
@@ -574,7 +574,7 @@ x + 2y - z = 1 \end{split}\]</div>
 </div>
 </div>
 <p>In the first case, the lines never cross because they are parallel. Therefore, the system of equations has no solution. We can write <span class="math notranslate nohighlight">\(\mathbf{x} \in \emptyset\)</span> (empty set).</p>
-<p>The lines are parallel in the second case as well, but now they are on top of each other. There are an infinite number of solutions to that system - every point on the line $ y = (7-2x)/3 $ is a solution. We can then write that the solution set is $ { (t, \frac{7-2t}{3}), t \in \mathbb{R})} $.</p>
+<p>The lines are parallel in the second case as well, but now they are on top of each other. There are an infinite number of solutions to that system - every point on the line \( y = (7-2x)/3 \) is a solution. We can then write that the solution set is \( { (t, \frac{7-2t}{3}), t \in \mathbb{R})} \).</p>
 <p>We can conclude that the existence and uniqueness of the solution of a linear system depends on whether the lines are parallel or not.</p>
 <p>Let us test this by finding the cross products of the row-vectors of the coefficient matrices. The row-vectors are normal to the lines given by the equations, so if the equation graphs are parallel, their normals will be too.</p>
 <div class="cell tag_hide-input docutils container">
