--- a/mathematics/sets and functions/functions.html
+++ b/mathematics/sets and functions/functions.html
@@ -400,7 +400,7 @@ f_3 : (- \infty, 0) \to (0, \infty), \quad &amp; f_3(x) = x^2
 <div class="math notranslate nohighlight">
 \[ f^{-1}(E) := \{ x \in \mathcal{D} : f(x) \in E \} \subseteq \mathcal{D}. \]</div>
 <p>If we take <span class="math notranslate nohighlight">\(E = \mathcal{C}\)</span>, then <span class="math notranslate nohighlight">\(f^{-1}(\mathcal{C}) = \mathcal{D}\)</span>. In other words, we are looking for the values <span class="math notranslate nohighlight">\(x \in \mathcal{D}\)</span> for which <span class="math notranslate nohighlight">\(f(x)\)</span> takes specified values.</p>
-<p>Again from the example above, let us consider $ E_1 = { 1 }, E_2 = { 2 }, E_3 = { 1, 2 } $:</p>
+<p>Again from the example above, let us consider \( E_1 = { 1 }, E_2 = { 2 }, E_3 = { 1, 2 } \):</p>
 <div class="math notranslate nohighlight">
 \[\begin{split}
 f^{-1}(E_1) = \{ x \in \mathcal{D} : f(x) \in E_1 \} = \{ x \in \mathcal{D} : f(x) = 1 \} = \{ a \} \\
