deploy: 42468a37f04c57e292ddfd406d8dac0b8aaeee01

--- a/geosciences/intro.html
+++ b/geosciences/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Google Earth Engine Getting Started" href="Google_Earth_Engine_Getting_Started_.html" />
-    <link rel="prev" title="Lecture 1 (Vectors)" href="../mathematics/math_methods_1/Vectors.html" />
+    <link rel="prev" title="Sets" href="../mathematics/sets and functions/sets.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -235,7 +235,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../mathematics/math_methods_1/Vectors.html" title="previous page">Lecture 1 (Vectors)</a>
+    <a class='left-prev' id="prev-link" href="../mathematics/sets and functions/sets.html" title="previous page">Sets</a>
     <a class='right-next' id="next-link" href="Google_Earth_Engine_Getting_Started_.html" title="next page">Google Earth Engine Getting Started</a>
 
     </div>
