--- a/mathematics/complex analysis/intro.html
+++ b/mathematics/complex analysis/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Complex integration" href="integrating.html" />
-    <link rel="prev" title="Linear Regression" href="../statistics/Linear_Regression.html" />
+    <link rel="prev" title="Fractals" href="../Fractals.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -77,10 +77,40 @@
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+      <a href="../Statistics_for_Geoscientists.html">Introduction to statistics for Geoscientists</a>
     </li>
     <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../Tensors_Review.html">Review of tensors</a>
+    </li>
+    <li class="">
+      <a href="../Taylor_series.html">Taylor series</a>
+    </li>
+    <li class="">
+      <a href="../Coordinate_Systems.html">Lecture 1 (Coordinate Systems)</a>
+    </li>
+    <li class="">
+      <a href="../Big_O_notation.html">Big O notation</a>
+    </li>
+    <li class="">
+      <a href="../Vectors.html">Lecture 1 (Vectors)</a>
+    </li>
+    <li class="">
+      <a href="../Vector_calculus.html">Vector calculus</a>
+    </li>
+    <li class="">
+      <a href="../Fourier Series.html">Fourier Series</a>
+    </li>
+    <li class="">
+      <a href="../Timestepping_an_ODE.html">Solving (or "timestepping") an ordinary differential equation (ODE)</a>
+    </li>
+    <li class="">
+      <a href="../Fourier Transforms.html">Fourier Transforms</a>
+    </li>
+    <li class="">
+      <a href="../Linear_Regression.html">Linear Regression</a>
+    </li>
+    <li class="">
+      <a href="../Fractals.html">Fractals</a>
     </li>
     <li class="active">
       <a href="">Complex Analysis</a>
@@ -100,28 +130,13 @@
       <li class="">
         <a href="Introduction.html">Introduction</a>
       </li>
-      <li class="">
-        <a href="Fractals.html">Fractals</a>
-      </li>
     </ul>
     </li>
     <li class="">
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
-    </li>
-    <li class="">
       <a href="../sets and functions/intro.html">Sets And Functions</a>
-    </li>
-    <li class="">
-      <a href="../sequences_and_series/intro.html">Sequences And Series</a>
-    </li>
-    <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
   </ul>
   </li>
@@ -303,7 +318,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../statistics/Linear_Regression.html" title="previous page">Linear Regression</a>
+    <a class='left-prev' id="prev-link" href="../Fractals.html" title="previous page">Fractals</a>
     <a class='right-next' id="next-link" href="integrating.html" title="next page">Complex integration</a>
 
     </div>
