--- a/mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html
+++ b/mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Calculus" href="../calculus/intro.html" />
+    <link rel="next" title="Sets and functions" href="../sets and functions/intro.html" />
     <link rel="prev" title="Solving systems of linear equations" href="Linear_Systems.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -77,10 +77,40 @@
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+      <a href="../Statistics_for_Geoscientists.html">Introduction to statistics for Geoscientists</a>
     </li>
     <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../Tensors_Review.html">Review of tensors</a>
+    </li>
+    <li class="">
+      <a href="../Taylor_series.html">Taylor series</a>
+    </li>
+    <li class="">
+      <a href="../Coordinate_Systems.html">Lecture 1 (Coordinate Systems)</a>
+    </li>
+    <li class="">
+      <a href="../Big_O_notation.html">Big O notation</a>
+    </li>
+    <li class="">
+      <a href="../Vectors.html">Lecture 1 (Vectors)</a>
+    </li>
+    <li class="">
+      <a href="../Vector_calculus.html">Vector calculus</a>
+    </li>
+    <li class="">
+      <a href="../Fourier Series.html">Fourier Series</a>
+    </li>
+    <li class="">
+      <a href="../Timestepping_an_ODE.html">Solving (or "timestepping") an ordinary differential equation (ODE)</a>
+    </li>
+    <li class="">
+      <a href="../Fourier Transforms.html">Fourier Transforms</a>
+    </li>
+    <li class="">
+      <a href="../Linear_Regression.html">Linear Regression</a>
+    </li>
+    <li class="">
+      <a href="../Fractals.html">Fractals</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -103,19 +133,7 @@
     </ul>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
-    </li>
-    <li class="">
       <a href="../sets and functions/intro.html">Sets And Functions</a>
-    </li>
-    <li class="">
-      <a href="../sequences_and_series/intro.html">Sequences And Series</a>
-    </li>
-    <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
   </ul>
   </li>
@@ -601,7 +619,7 @@ Eigenvectors:
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Linear_Systems.html" title="previous page">Solving systems of linear equations</a>
-    <a class='right-next' id="next-link" href="../calculus/intro.html" title="next page">Calculus</a>
+    <a class='right-next' id="next-link" href="../sets and functions/intro.html" title="next page">Sets and functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
