--- a/mathematics/sets and functions/elementary_functions_1.html
+++ b/mathematics/sets and functions/elementary_functions_1.html
@@ -77,22 +77,46 @@
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+      <a href="../Statistics_for_Geoscientists.html">Introduction to statistics for Geoscientists</a>
     </li>
     <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../Tensors_Review.html">Review of tensors</a>
+    </li>
+    <li class="">
+      <a href="../Taylor_series.html">Taylor series</a>
+    </li>
+    <li class="">
+      <a href="../Coordinate_Systems.html">Lecture 1 (Coordinate Systems)</a>
+    </li>
+    <li class="">
+      <a href="../Big_O_notation.html">Big O notation</a>
+    </li>
+    <li class="">
+      <a href="../Vectors.html">Lecture 1 (Vectors)</a>
+    </li>
+    <li class="">
+      <a href="../Vector_calculus.html">Vector calculus</a>
+    </li>
+    <li class="">
+      <a href="../Fourier Series.html">Fourier Series</a>
+    </li>
+    <li class="">
+      <a href="../Timestepping_an_ODE.html">Solving (or "timestepping") an ordinary differential equation (ODE)</a>
+    </li>
+    <li class="">
+      <a href="../Fourier Transforms.html">Fourier Transforms</a>
+    </li>
+    <li class="">
+      <a href="../Linear_Regression.html">Linear Regression</a>
+    </li>
+    <li class="">
+      <a href="../Fractals.html">Fractals</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
     </li>
     <li class="">
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
-    </li>
-    <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
     </li>
     <li class="active">
       <a href="intro.html">Sets And Functions</a>
@@ -116,12 +140,6 @@
         <a href="sets.html">Sets</a>
       </li>
     </ul>
-    </li>
-    <li class="">
-      <a href="../sequences_and_series/intro.html">Sequences And Series</a>
-    </li>
-    <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
   </ul>
   </li>
