--- a/mathematics/math_methods_1/Vectors.html
+++ b/mathematics/math_methods_1/Vectors.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Geosciences" href="../../geosciences/intro.html" />
-    <link rel="prev" title="Lecture 1 (Coordinate Systems)" href="Coordinate_Systems.html" />
+    <link rel="prev" title="Coordinate systems" href="Coordinate_Systems.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -104,7 +104,7 @@
       <a href="intro.html">Math Methods 1</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Coordinate_Systems.html">Lecture 1 (Coordinate Systems)</a>
+        <a href="Coordinate_Systems.html">Coordinate systems</a>
       </li>
       <li class="active">
         <a href="">Lecture 1 (Vectors)</a>
@@ -669,7 +669,7 @@ if (outputEl) {{
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Coordinate_Systems.html" title="previous page">Lecture 1 (Coordinate Systems)</a>
+    <a class='left-prev' id="prev-link" href="Coordinate_Systems.html" title="previous page">Coordinate systems</a>
     <a class='right-next' id="next-link" href="../../geosciences/intro.html" title="next page">Geosciences</a>
 
     </div>
