--- a/mathematics/math_methods_1/intro.html
+++ b/mathematics/math_methods_1/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Lecture 1 (Coordinate Systems)" href="Coordinate_Systems.html" />
+    <link rel="next" title="Coordinate systems" href="Coordinate_Systems.html" />
     <link rel="prev" title="Sets" href="../sets and functions/sets.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,7 +104,7 @@
       <a href="">Math Methods 1</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Coordinate_Systems.html">Lecture 1 (Coordinate Systems)</a>
+        <a href="Coordinate_Systems.html">Coordinate systems</a>
       </li>
       <li class="">
         <a href="Vectors.html">Lecture 1 (Vectors)</a>
@@ -225,7 +225,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../sets and functions/sets.html" title="previous page">Sets</a>
-    <a class='right-next' id="next-link" href="Coordinate_Systems.html" title="next page">Lecture 1 (Coordinate Systems)</a>
+    <a class='right-next' id="next-link" href="Coordinate_Systems.html" title="next page">Coordinate systems</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
