deploy: 264e137676418be8796c7c205ff9c606f9bc7b3a

--- a/coding/Pandas/Pandas_1basics.html
+++ b/coding/Pandas/Pandas_1basics.html
@@ -108,6 +108,9 @@
   </ul>
   </li>
   <li class="">
+    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
+  </li>
+  <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
