--- a/geosciences/Image_Filtering.html
+++ b/geosciences/Image_Filtering.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Downloading earthquake data" href="Seismology.html" />
-    <link rel="prev" title="Camera Calibration" href="Camera_Calibration.html" />
+    <link rel="prev" title="1D Resistivity Forward Modelling" href="1D_Resistivity_Forward_Modelling.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -74,14 +74,14 @@
     <a href="../coding/intro.html">Coding</a>
   </li>
   <li class="">
+    <a href="../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
+  </li>
+  <li class="">
     <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="active">
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
-    <li class="">
-      <a href="Google_Earth_Engine_Getting_Started_.html">Installation</a>
-    </li>
     <li class="">
       <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
     </li>
@@ -89,13 +89,7 @@
       <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
-    </li>
-    <li class="">
       <a href="Climate_Model.html">Constructing an energy balance model</a>
-    </li>
-    <li class="">
-      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
     </li>
     <li class="">
       <a href="Tides.html">Tides</a>
@@ -111,9 +105,6 @@
     </li>
     <li class="">
       <a href="1D_Resistivity_Forward_Modelling.html">Enter field data</a>
-    </li>
-    <li class="">
-      <a href="Camera_Calibration.html">Camera Calibration</a>
     </li>
     <li class="active">
       <a href="">Image Filtering</a>
@@ -556,7 +547,7 @@ Image dimension = (390, 556)
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Camera_Calibration.html" title="previous page">Camera Calibration</a>
+    <a class='left-prev' id="prev-link" href="1D_Resistivity_Forward_Modelling.html" title="previous page">1D Resistivity Forward Modelling</a>
     <a class='right-next' id="next-link" href="Seismology.html" title="next page">Downloading earthquake data</a>
 
     </div>
