--- a/mathematics/intro.html
+++ b/mathematics/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Numerical methods" href="numerical_methods/intro.html" />
-    <link rel="prev" title="Flow control statements" href="../coding/Intro to Python/Flow_control_statements.html" />
+    <link rel="prev" title="Camera Calibration" href="../extra_resources_for_researchers/Camera_Calibration.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -72,6 +72,9 @@
   </li>
   <li class="">
     <a href="../coding/intro.html">Coding</a>
+  </li>
+  <li class="">
+    <a href="../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
   <li class="active">
     <a href="">Mathematics</a>
@@ -217,7 +220,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../coding/Intro to Python/Flow_control_statements.html" title="previous page">Flow control statements</a>
+    <a class='left-prev' id="prev-link" href="../extra_resources_for_researchers/Camera_Calibration.html" title="previous page">Camera Calibration</a>
     <a class='right-next' id="next-link" href="numerical_methods/intro.html" title="next page">Numerical methods</a>
 
     </div>
