--- a/coding/Dakota.html
+++ b/coding/Dakota.html
@@ -88,6 +88,9 @@
   </ul>
   </li>
   <li class="">
+    <a href="../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
+  </li>
+  <li class="">
     <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
