--- a/coding/Intro to Python/Flow_control_statements.html
+++ b/coding/Intro to Python/Flow_control_statements.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Mathematics" href="../../mathematics/intro.html" />
+    <link rel="next" title="Extra resources for researchers" href="../../extra_resources_for_researchers/intro.html" />
     <link rel="prev" title="Nested lists" href="Nested_lists.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -139,6 +139,9 @@
     </ul>
     </li>
   </ul>
+  </li>
+  <li class="">
+    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
   <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
@@ -364,7 +367,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Nested_lists.html" title="previous page">Nested lists</a>
-    <a class='right-next' id="next-link" href="../../mathematics/intro.html" title="next page">Mathematics</a>
+    <a class='right-next' id="next-link" href="../../extra_resources_for_researchers/intro.html" title="next page">Extra resources for researchers</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
