--- a/coding/Pandas/Pandas_4summary_statistics.html
+++ b/coding/Pandas/Pandas_4summary_statistics.html
@@ -108,6 +108,9 @@
   </ul>
   </li>
   <li class="">
+    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
+  </li>
+  <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
