--- a/geosciences/Climate_Model.html
+++ b/geosciences/Climate_Model.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Particle Image Velocimetry (PIV)" href="Particle_Image_Velocimetry.html" />
-    <link rel="prev" title="Google Earth Engine Foundations" href="Google_Earth_Engine_Foundations.html" />
+    <link rel="next" title="Tides" href="Tides.html" />
+    <link rel="prev" title="Image Transformations and orthorectification" href="Image_Transformations_and_Orthorectification.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -74,28 +74,22 @@
     <a href="../coding/intro.html">Coding</a>
   </li>
   <li class="">
+    <a href="../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
+  </li>
+  <li class="">
     <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="active">
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Google_Earth_Engine_Getting_Started_.html">Installation</a>
-    </li>
-    <li class="">
       <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
     </li>
     <li class="">
       <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
-    <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
-    </li>
     <li class="active">
       <a href="">Constructing an energy balance model</a>
-    </li>
-    <li class="">
-      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
     </li>
     <li class="">
       <a href="Tides.html">Tides</a>
@@ -111,9 +105,6 @@
     </li>
     <li class="">
       <a href="1D_Resistivity_Forward_Modelling.html">Enter field data</a>
-    </li>
-    <li class="">
-      <a href="Camera_Calibration.html">Camera Calibration</a>
     </li>
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
@@ -433,8 +424,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Google_Earth_Engine_Foundations.html" title="previous page">Google Earth Engine Foundations</a>
-    <a class='right-next' id="next-link" href="Particle_Image_Velocimetry.html" title="next page">Particle Image Velocimetry (PIV)</a>
+    <a class='left-prev' id="prev-link" href="Image_Transformations_and_Orthorectification.html" title="previous page">Image Transformations and orthorectification</a>
+    <a class='right-next' id="next-link" href="Tides.html" title="next page">Tides</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
