--- a/geosciences/Tides.html
+++ b/geosciences/Tides.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Milankovitch cycles" href="Milankovitch_cycles.html" />
-    <link rel="prev" title="Particle Image Velocimetry (PIV)" href="Particle_Image_Velocimetry.html" />
+    <link rel="prev" title="Constructing an energy balance model" href="Climate_Model.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -74,14 +74,14 @@
     <a href="../coding/intro.html">Coding</a>
   </li>
   <li class="">
+    <a href="../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
+  </li>
+  <li class="">
     <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="active">
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
-    <li class="">
-      <a href="Google_Earth_Engine_Getting_Started_.html">Installation</a>
-    </li>
     <li class="">
       <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
     </li>
@@ -89,13 +89,7 @@
       <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
-    </li>
-    <li class="">
       <a href="Climate_Model.html">Constructing an energy balance model</a>
-    </li>
-    <li class="">
-      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
     </li>
     <li class="active">
       <a href="">Tides</a>
@@ -111,9 +105,6 @@
     </li>
     <li class="">
       <a href="1D_Resistivity_Forward_Modelling.html">Enter field data</a>
-    </li>
-    <li class="">
-      <a href="Camera_Calibration.html">Camera Calibration</a>
     </li>
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
@@ -519,7 +510,7 @@ where <span class="math notranslate nohighlight">\(\omega_1=\frac{360^\circ}{24.
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Particle_Image_Velocimetry.html" title="previous page">Particle Image Velocimetry (PIV)</a>
+    <a class='left-prev' id="prev-link" href="Climate_Model.html" title="previous page">Constructing an energy balance model</a>
     <a class='right-next' id="next-link" href="Milankovitch_cycles.html" title="next page">Milankovitch cycles</a>
 
     </div>
