--- a/intro.html
+++ b/intro.html
@@ -73,6 +73,9 @@
     <a href="coding/intro.html">Coding</a>
   </li>
   <li class="">
+    <a href="extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
+  </li>
+  <li class="">
     <a href="mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
