deploy: 720dd359494c1b7af7a00459ce60d4625d0247cc

--- a/extra_resources_for_researchers/Google_Earth_Engine_Getting_Started_.html
+++ b/extra_resources_for_researchers/Google_Earth_Engine_Getting_Started_.html
@@ -77,7 +77,7 @@
     <a href="intro.html">Extra Resources For Researchers</a>
   <ul class="nav sidenav_l2">
     <li class="active">
-      <a href="">Installation</a>
+      <a href="">Google Earth Engine Getting Started</a>
     </li>
     <li class="">
       <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
