--- a/extra_resources_for_researchers/intro.html
+++ b/extra_resources_for_researchers/intro.html
@@ -77,7 +77,7 @@
     <a href="">Extra Resources For Researchers</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Google_Earth_Engine_Getting_Started_.html">Installation</a>
+      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
     </li>
     <li class="">
       <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
