deploy: c6af1a6dbc5d653d4eb3de04c52f8158689b8b97

--- a/geosciences/1D_Resistivity_Forward_Modelling.html
+++ b/geosciences/1D_Resistivity_Forward_Modelling.html
@@ -101,7 +101,7 @@
       <a href="Wave_dispersion.html">Waves</a>
     </li>
     <li class="active">
-      <a href="">Enter field data</a>
+      <a href="">1D Resistivity Forward Modelling</a>
     </li>
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
@@ -425,7 +425,7 @@
 </div>
 </div>
 <div class="cell_output docutils container">
-<img alt="../_images/1D_Resistivity_Forward_Modelling_16_0.png" src="../_images/1D_Resistivity_Forward_Modelling_16_0.png" />
+<img alt="../_images/1D_Resistivity_Forward_Modelling_15_0.png" src="../_images/1D_Resistivity_Forward_Modelling_15_0.png" />
 </div>
 </div>
 <p>You could generate a loop to test a variety of models and save the best fit models to memory.</p>
