--- a/geosciences/Seismology.html
+++ b/geosciences/Seismology.html
@@ -101,7 +101,7 @@
       <a href="Wave_dispersion.html">Waves</a>
     </li>
     <li class="">
-      <a href="1D_Resistivity_Forward_Modelling.html">Enter field data</a>
+      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
     </li>
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
